# SpriteExtractor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SpriteExtractor.code-workspace
CMake/: LinkResources.cmake
SpriteExtractor/: App.cpp  App.hpp  CMakeLists.txt  MessageBroker.hpp  SFMLApp.cpp  SFMLApp.hpp  SpriteExtractor.cpp  SpriteExtractor.h  Types.hpp  imgui-extra.hpp  main.cpp
SpriteExtractor/Messages/: GenericActions.hpp  MainWindowActions.hpp  RightPanelActions.hpp
SpriteExtractor/Platform/: CMakeLists.txt  GenericPlatform.h  MacPlatform.mm  WindowsPlatform.cpp
SpriteExtractor/Serializers/: CMakeLists.txt  Paper2DSerializer.cpp  Paper2DSerializer.hpp  Serializer.cpp  Serializer.hpp
SpriteExtractor/Widgets/: CMakeLists.txt  CentralPanelWidget.cpp  CentralPanelWidget.hpp  MainWindowWidget.cpp  RightPanelWidget.cpp  RightPanelWidget.hpp
SpriteExtractor/imgui-sfml/: CMakeLists.txt  imconfig-SFML.h  imgui-SFML.cpp
SpriteExtractorApp/: App.cpp  App.hpp  CMakeLists.txt  CommandQueue.cpp  CommandQueue.hpp  MessageBroker.hpp  QtApp.cpp  QtApp.hpp  SFMLApp.cpp  SFMLApp.hpp  custom-imconfig.h  imgui-extra.cpp  imgui-extra.hpp  main.cpp
SpriteExtractorApp/AssetTypes/: CMakeLists.txt  FontAsset.cpp  FontAsset.hpp  ImFontAsset.cpp  ImFontAsset.hpp
SpriteExtractorApp/CommandQueue/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.fwd.hpp  CommandQueue.hpp
SpriteExtractorApp/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
SpriteExtractorApp/Messages/: GenericActions.hpp  RightPanelActions.hpp  SpriteSearchMessages.hpp
SpriteExtractorApp/Model/: CMakeLists.txt  ModelActions.cpp  ModelActions.hpp  ModelManager.cpp  ModelManager.hpp  ModelPolicies.hpp  SpriteSheet.cpp  SpriteSheet.hpp
SpriteExtractorApp/Model/SpriteSheet/: Animation.hpp  CMakeLists.txt  Sprite.hpp  SpriteSheet.cpp  SpriteSheet.fwd.hpp  SpriteSheet.hpp  SpriteSheetActions.cpp  SpriteSheetActions.hpp
SpriteExtractorApp/Platform/: GenericPlatform.h  MacPlatform.mm  WindowsPlatform.cpp
SpriteExtractorApp/QtUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
SpriteExtractorApp/QtUI/Assets/: QPixmapLoader.hpp
SpriteExtractorApp/QtUI/Dialogs/: CMakeLists.txt
SpriteExtractorApp/QtUI/Dialogs/NewProjectDialog/: CMakeLists.txt  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui
SpriteExtractorApp/QtUI/Widgets/: CMakeLists.txt
SpriteExtractorApp/QtUI/Widgets/ColorSelector/: CMakeLists.txt  colordisplay.cpp  colordisplay.h  huecolorselector.cpp  huecolorselector.h
SpriteExtractorApp/QtUI/Widgets/SpriteViewer/: CMakeLists.txt  spriteviewer.cpp  spriteviewer.h  spriteviewer.ui
SpriteExtractorApp/Serializers/: Paper2DSerializer.cpp  Paper2DSerializer.hpp  Serializer.cpp  Serializer.hpp
SpriteExtractorApp/Services/: CMakeLists.txt  Services.cpp  Services.fwd.hpp  Services.hpp
SpriteExtractorApp/Services/AssetManager/: AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetPtr.hpp  CMakeLists.txt
SpriteExtractorApp/Services/ImGuiManager/: CMakeLists.txt  ImGuiManager.cpp  ImGuiManager.hpp  SFMLImGuiManager.cpp  SFMLImGuiManager.hpp
SpriteExtractorApp/Services/Scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.hpp
SpriteExtractorApp/UI/: CMakeLists.txt  MainWindowWidget.cpp  MainWindowWidget.hpp  PopupsController.cpp  PopupsController.hpp
SpriteExtractorApp/UI/Panels/: CMakeLists.txt  CentralPanelWidget.cpp  CentralPanelWidget.hpp  RightPanelWidget.cpp  RightPanelWidget.hpp
SpriteExtractorApp/UI/Popups/: CMakeLists.txt  PopupWidget.cpp  PopupWidget.hpp  SearchingPopup.cpp  SearchingPopup.hpp
SpriteExtractorApp/UI/Widgets/: CMakeLists.txt  CentralPanelWidget.cpp  CentralPanelWidget.hpp  IMainWindowWidget.cpp  IMainWindowWidget.hpp  IPanelWidget.cpp  IPanelWidget.hpp  IWidget.cpp  IWidget.hpp  MainWindowWidget.cpp  MainWindowWidget.hpp  RightPanelWidget.cpp  RightPanelWidget.hpp
SpriteExtractorApp/Utils/: Traits.hpp
SpriteExtractorApp/Widgets/: CentralPanelWidget.hpp  IWidget.hpp  MainWindowWidget.hpp  RightPanelWidget.cpp  RightPanelWidget.hpp
SpriteExtractorApp/Windows/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
SpriteExtractorApp/Windows/Panels/: CMakeLists.txt  ConsolePanel.cpp  ConsolePanel.hpp  SearchConfigPanel.cpp  SearchConfigPanel.hpp  SpriteInfoPanel.cpp  SpriteInfoPanel.hpp  SpritesPanel.cpp  SpritesPanel.hpp
SpriteExtractorApp/Windows/Popups/: CMakeLists.txt  NewAnimationPopup.cpp  NewAnimationPopup.hpp  SearchingPopup.hpp
SpriteExtractorApp/imgui-sfml/: CMakeLists.txt  imgui-SFML.cpp
SpriteExtractorLib/: CMakeLists.txt  SpriteExtractor.cpp  Types.hpp
UIFramework/: CMakeLists.txt
UIFramework/Controllers/: PopupsController.cpp  PopupsController.hpp
UIFramework/UI/: BaseMainWindow.cpp  BaseMainWindow.hpp  BaseWindow.cpp  BaseWindow.hpp  PanelWindow.cpp  PanelWindow.hpp
UIFramework/UI/Popup/: PopupWindow.cpp  PopupWindow.hpp
lib/ImGui/: CMakeLists.txt
